src/objects/TR1__Job_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>TR1__Application__c</referenceTo>
        <relationshipLabel>Job Reporting</relationshipLabel>
        <relationshipName>Job_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Blank_Space__c</fullName>
        <formula>NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blank Space</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Job Reporting</relationshipLabel>
        <relationshipName>Job_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Composite_Key__c</fullName>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Reporting</relationshipLabel>
        <relationshipName>Job_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact__c</fullName>
        <formula>TR1__Job__r.TR1__Job_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Name__c</fullName>
        <formula>TR1__Job__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Owner__c</fullName>
        <formula>TR1__Job__r.Owner:User.FirstName + &apos; &apos; + TR1__Job__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Reporting_Details__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Reporting Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Job Reporting</relationshipLabel>
        <relationshipName>Job_Reporting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Kanban_Swimlane_Ranking__c</fullName>
        <description>This decides the order in which the cards are displayed within a Swimlane by default.</description>
        <inlineHelpText>This decides the order in which the cards are displayed within a Swimlane by default.</inlineHelpText>
        <label>Kanban Swimlane Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__No_of_Days_in_Stage__c</fullName>
        <formula>TR1__Submittal__r.TR1__Number_of_Days_in_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Day(s) in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>TR1__Offer__c</referenceTo>
        <relationshipLabel>Job Reporting</relationshipLabel>
        <relationshipName>Job_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notification__c</fullName>
        <label>Rejection Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Rejection Email</fullName>
                </value>
                <value>
                    <fullName>Job Owner Will Notify</fullName>
                </value>
                <value>
                    <fullName>Contact Owner Will Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Send_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Out</label>
        <referenceTo>TR1__Send_Out__c</referenceTo>
        <relationshipLabel>Job Reporting</relationshipLabel>
        <relationshipName>Job_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_Details__c</fullName>
        <formula>IF(
    NOT(ISBLANK(TR1__Closing_Report__c)),
    &quot;Closing Report: &quot; + HYPERLINK(&apos;/&apos; + TR1__Closing_Report__c, TR1__Closing_Report__r.Name),
    IF(
        NOT(ISBLANK(TR1__Offer__c)),
        &quot;Offer: &quot; + HYPERLINK(&apos;/&apos; + TR1__Offer__c, TR1__Offer__r.Name),
        IF(
            NOT(ISBLANK(TR1__Send_Out__c)),
            &quot;Send Out: &quot; + HYPERLINK(&apos;/&apos; + TR1__Send_Out__c, TR1__Send_Out__r.Name),
            IF(
                NOT(ISBLANK(TR1__Submittal__c)),
                &quot;Submittal: &quot; + HYPERLINK(&apos;/&apos; + TR1__Submittal__c, TR1__Submittal__r.Name),
                IF(
                    NOT(ISBLANK(TR1__Application__c)),
                    &quot;Application: &quot; + HYPERLINK(&apos;/&apos; + TR1__Application__c, TR1__Application__r.Name),
                    NULL
                )
            )
        )
    )
) + BR() + 
&quot;Created By: &quot; + CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicaton</fullName>
                </value>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Send Out</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Closing Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Status_Ranking__c</fullName>
        <formula>CASE(
    TR1__isRejected__c,
    &quot;Accepted&quot;, 0,
    &quot;Created&quot;,  0,
    &quot;Current&quot;,  0,
    &quot;No&quot;,       0,
    &quot;Rejected&quot;, 1,
    &quot;Yes&quot;,      1,
    -1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Submittal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submittal</label>
        <referenceTo>TR1__Submittal__c</referenceTo>
        <relationshipLabel>Job Reporting</relationshipLabel>
        <relationshipName>Job_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__isRejected__c</fullName>
        <label>Is Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Reporting</label>
    <nameField>
        <displayFormat>JR-{000000}</displayFormat>
        <label>Job Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Reporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>